lld/test/error-fixup-target.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that unbindable target name produces a readable error.
#

---
atoms:
    - name:          entry
      scope:         hidden
      fixups:
      - offset:      3
        kind:        3
        target:      bar
      - offset:      5
        kind:        3
        target:      baz

    - name:          bar
      definition:    undefined

...


# CHECK:  error: Fixup has target 'baz' which does not exist
# CHECK:      baz
